; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_user.c_xfrm_acquire_msgsize.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_user.c_xfrm_acquire_msgsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_state = type { i32 }
%struct.xfrm_policy = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.xfrm_state*, %struct.xfrm_policy*)* @xfrm_acquire_msgsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @xfrm_acquire_msgsize(%struct.xfrm_state* %0, %struct.xfrm_policy* %1) #0 {
  %3 = alloca %struct.xfrm_state*, align 8
  %4 = alloca %struct.xfrm_policy*, align 8
  store %struct.xfrm_state* %0, %struct.xfrm_state** %3, align 8
  store %struct.xfrm_policy* %1, %struct.xfrm_policy** %4, align 8
  %5 = call i64 @NLMSG_ALIGN(i32 4)
  %6 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %7 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 4, %9
  %11 = trunc i64 %10 to i32
  %12 = call i64 @nla_total_size(i32 %11)
  %13 = add i64 %5, %12
  %14 = call i64 @nla_total_size(i32 4)
  %15 = add i64 %13, %14
  %16 = load %struct.xfrm_state*, %struct.xfrm_state** %3, align 8
  %17 = getelementptr inbounds %struct.xfrm_state, %struct.xfrm_state* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @xfrm_user_sec_ctx_size(i32 %18)
  %20 = call i64 @nla_total_size(i32 %19)
  %21 = add i64 %15, %20
  %22 = call i64 (...) @userpolicy_type_attrsize()
  %23 = add i64 %21, %22
  ret i64 %23
}

declare dso_local i64 @NLMSG_ALIGN(i32) #1

declare dso_local i64 @nla_total_size(i32) #1

declare dso_local i32 @xfrm_user_sec_ctx_size(i32) #1

declare dso_local i64 @userpolicy_type_attrsize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
